# SeaLevel

./: .gitignore  .markdownlint.json  build.py  check_agg.py  check_buckets.py  check_counts.py  check_frontend_params.py  dev.bat  generate_sealevel.py  index.html  launcher.py  package-lock.json  package.json  requirements.txt  start.bat  start_api.bat  tsconfig.app.json  tsconfig.json  vite.config.ts
.zed/: settings.json
backend/: check_port.py  main.py  requirements.txt  sealevel_api.spec  start_test.py  test_api.py  test_duckdb.py
docs/: DEVELOPER_GUIDE.md  FILTER.md  USER_GUIDE.md
release/: start.bat
release/backend/: main.py  requirements.txt  run_server.py  run_test.ps1
src/: App.tsx  api.ts  index.css  store.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: create_from_image.ps1  create_ico.ps1  create_icon.ps1  create_sizes.ps1  update_square_icons.ps1
src-tauri/src/: backend — decade (2).rs  backend — копия.rs  backend.rs  lib.rs  main.rs
src/components/: ActionButtonsSection.tsx  ChartSection.tsx  ControlsSection.tsx  FilesModal.tsx  ImportModal.tsx  SeaLevelUPlot.tsx
