[package]
name = "sealevel"
version = "1.0.0"
description = "SeaLevel Desktop Application"
authors = ["SeaLevel"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "sealevel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
duckdb = { version = "1", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
